# TorchDiag

./: README.md  pyproject.toml
examples/: basic_training_example.py
src/torchdiag/: __init__.py  collectors.py  compare.py  core.py  diagnosis.py  events.py  models.py  report.py
src/torchdiag/templates/: report.html.j2
tests/: test_compare.py  test_core.py  test_diagnosis.py
