[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchdiag"
version = "0.1.0"
description = "PyTorch Performance Diagnostic Toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "TorchDiag Contributors"}]
dependencies = [
  "torch",
  "psutil",
  "pynvml",
  "plotly",
  "jinja2",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
